# Minecraft

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  ChunkManager.cpp  ChunkManager.h  README.md  TerrainGenerator.cpp  TerrainGenerator.h  benchmark.sh  build_web.sh  camera.cpp  camera.h  chunk.cpp  chunk.h  cube.cpp  cube.h  dev.sh  main.cpp  profile_1.txt  profile_2.txt  profile_stale_1.txt  profile_stale_2.txt  serve_web.py  shader.cpp  texture_array.cpp  texture_array.h  water_debug_screenshot.ppm  world.cpp  world.h
Shaders/: frag.shd  vert.shd
assets/: minecraft.rc
assets/Shaders/: billboard_frag.shd  billboard_vert.shd  cloud_frag.shd  cloud_vert.shd  frag.shd  ui_frag.shd  ui_vert.shd  vert.shd
cmake/: mingw-w64-toolchain.cmake  tracy_mingw_prefix.h
docs/water_demo/: demo3d.html  index.html
include/: ChunkManager.h  TerrainGenerator.h  WaterSimulator.h  block_layers.h  camera.h  chunk.h  chunk_mesh.h  chunk_section.h  collision.h  cube.h  entity_cube_renderer.h  entity_manager.h  game_state.h  inventory.h  light_data.h  light_propagation.h  light_sampler.h  menu.h  mesh_types.h  particle_system.h  perlin_noise.h  player.h  player_renderer.h  shader.h  shader_patch.h  skylight.h  sparse_skylight.h  texture.h  texture_array.h  tnt_entity.h  tracy_shim.h  ui_renderer.h  widgets.h  world.h  world_directory.h  world_resolver.h  world_save.h
include/net/: chat_overlay.h  multiplayer_menu.h  net_protocol.h  net_session.h
scripts/: build_tools.sh  check_biomes  check_biomes.cpp  lint.sh  mapgen  mapgen.cpp  release.sh  run_mutations.sh  water_ca_debug.mjs  water_demo.cpp
server/: README.md  package.json  signaling.js
src/: ChunkManager.cpp  TerrainGenerator.cpp  WaterSimulator.cpp  camera.cpp  chunk.cpp  chunk_mesh.cpp  entity_cube_renderer.cpp  entity_manager.cpp  game_state.cpp  inventory.cpp  light_propagation.cpp  main.cpp  menu.cpp  particle_system.cpp  perlin_noise.cpp  player.cpp  player_renderer.cpp  profiler.h  shader.cpp  texture.cpp  texture_array.cpp  tnt_entity.cpp  ui_renderer.cpp  widgets.cpp  world.cpp  world_directory.cpp  world_save.cpp
src/net/: chat_overlay.cpp  multiplayer_menu.cpp  net_protocol.cpp  net_session.cpp
tests/: test_biomes.cpp  test_block_light.cpp  test_block_placement.cpp  test_block_properties.cpp  test_chunk_mesh.cpp  test_chunk_section.cpp  test_collision.cpp  test_coordinates.cpp  test_inventory.cpp  test_lighting_boundary.cpp  test_net_protocol.cpp  test_settings.cpp  test_sparse_light.cpp  test_terrain.cpp  test_tnt.cpp  test_water.cpp  test_world_directory.cpp  test_world_resolver.cpp  test_world_save.cpp
tests/stubs/: ChunkManager.h  chunk.h  world.h
web/: shell.html
